tests/parsing/smtlib/poly/errors/171_function_decl_unclosed_1.psmt2
(set-logic ALL)
(define-funs-rec ((foo (par (a) () bool _))))
