tests/parsing/smtlib/poly/errors/171_function_decl_unclosed_1.expected
File "tests/parsing/smtlib/poly/errors/171_function_decl_unclosed_1.psmt2", line 2, character 40-41:
Error while parsing a list of function declaration,
      read the reserved word '_',
      but expected a closing parenthesis to close the function declaration.
